@@ -3,6 +3,10 @@
 - initfv.rb, topmenu.rb: fixed problems caused by yesterday's digging in Menu
 - config/config.rb: sample user's configuration file
 - docs/user_manual/usermanual.xml: added chapter about configuration file
+- location.rb: exit is visible again (disappeared thanks to yesterday's
+  painting cleanup)
+- level SwitchPlace: fixed (used to add static objects directly through
+  Location#static_objects#add => they were invisible...)
 
 [23.January 2009]
 - heroandmonster.rb entity.rb sprite.rb item.rb staticobject.rb activeobject.rb
